--- a/para.html
+++ b/para.html
@@ -1,3 +1,3 @@
 <p>This is basically a local repo, 
     created for learning how to sync it remotely </p>
- <p>This is a new feature</p>   
+ <p>This is a new feature (dropdown)</p>   
